# omega-services

./: .gitignore  .travis.yml  Config  LICENSE  Makefile.in  README.md  Vagrantfile  aclocal.m4  configure  configure.ac  install-sh  mysql.m4  sed
contrib/: .svnignore  Makefile.in  Makefile.sub.in  m_custombl.c  m_splitserv.c
docs/: AUTHORS  LICENSE  MODULES  Makefile.in  OmegaStatistics.txt  README  example.cfg  exemptdb-schema.txt  m_example.c  splitsdb-schema.txt  watchdb-schema.txt
include/: .svnignore  access.h  appinclude.h  channel.h  cmds.h  command.h  config.h  configparse.h  configparser.h  core.h  database.h  dbmanager.h  dlink.h  event.h  eventhandler.h  extern.h  httpd.h  irc_string.h  links.h  log.h  logger.h  match.h  memory.h  metadata.h  modinclude.h  modque.h  module.h  old_httpd.h  parser.h  protocol.h  protocols.h  request.h  send.h  sendto.h  server.h  setup.h.in  sig.h  sighandler.h  socket.h  socketengine.h  (+8 more)
libopm/: configure  configure.in
libopm/doc/: .cvsignore  libopm-api.txt
libopm/src/: .cvsignore  Makefile.in  libopm.c  make  proxy.c  snprintf.h
modules/: Makefile.in  m_omegastats.c  mod_base.c
modules/client/: Makefile.in  g_access.c  g_bl.c  g_core.c  g_debug.c  g_die.c  g_ipbl.c  g_joinflood.c  g_log.c  g_modlist.c  g_modload.c  g_modreload.c  g_modunload.c  g_opers.c  g_opm.c  g_scan.c  g_sessions.c  g_update.c  g_userinfo.c  g_watch.c  w_core.c
modules/core/: Makefile.in  m_cli.c  m_fantasy.c  m_info.c  m_ping.c  m_stats.c  m_trace.c  m_version.c  m_whois.c
modules/db/: Makefile.in  flatfile.c
modules/protocol/: Makefile.in  bahamut.c  bahamut.h  charybdis.c  charybdis.h  directircd.c  directircd.h  elemental.c  elemental.h  hybrid.c  hybrid.h  inspircd.c  inspircd.h  inspircd12.c  inspircd12.h  inspircd20.c  inspircd20.h  kcircd.c  kcircd.h  nefarious.c  plexus.c  plexus.h  ratbox.c  ratbox3.c  ratbox3.h  unreal32.c
src/: .svnignore  Makefile.in  access.c  base64.c  channel.c  cmds.c  command.c  config.c  configparse.c  configparser.c  core.c  database.c  dbmanager.c  dlink.c  event.c  eventhandler.c  httpd.c  irc_string.c  links.c  log.c  logger.c  main.c  match.c  memory.c  metadata.c  modque.c  module.c  old_httpd.c  parser.c  protocol.c  send.c  sendto.c  server.c  sig.c  sighandler.c  socket.c  socketengine.c  thread.c  threads.c  tools.c  (+2 more)
src/socketengine/: Makefile.in  select.c
tests/: Makefile.in
tests/include/: core_spec.c  tests.h
tools/: Makefile.in  config_test.c  omega  omega.chk  secron.sh  updateignores.sh  xml_parse.c
